2009-09-05  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.in: Support binutils 2.100 and 3.0.

2009-09-08  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/s390/s390-32/____longjmp_chk.c: Removed.
	* sysdeps/s390/s390-64/____longjmp_chk.c: Removed.
	* sysdeps/unix/sysv/linux/s390/s390-32/____longjmp_chk.c: New file.
	* sysdeps/unix/sysv/linux/s390/s390-64/____longjmp_chk.c: New file.

2009-09-07  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/ld-collate.c (struct locale_collate_t): Add
	unnamed_section_defined field.
	(collate_read): Test and set unnamed_section_defined.

	* posix/getconf.c (vars): Handle POSIX2_LINE_MAX in addition to
	_POSIX2_LINE_MAX.

2009-09-04  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.in: Support binutils 2.20.

2009-09-03  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/i686/multiarch/strstr-c.c (__strstr_sse42,
	__strstr_ia32): Add attribute_hidden.

2009-09-01  Andreas Schwab  <schwab@redhat.com>

	* hesiod/nss_hesiod/hesiod-grp.c (internal_gid_from_group): Fix
	parsing of group entry.

2009-09-02  Andreas Schwab  <schwab@redhat.com>

	* libio/wfileops.c (_IO_wfile_seekoff): Account for readahead in
	external buffer.  Always discard readahead in internal buffer.
	* libio/Makefile (tests): Add bug-wsetpos.
	* libio/bug-wsetpos.c: New file.

2009-09-02  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/x86_64/multiarch/strstr-c.c (__strstr_sse42, __strstr_sse2):
	Add attribute_hidden.
	* sysdeps/x86_64/multiarch/strcasestr-c.c (__strcasestr_sse42,
	__strcasestr_sse2): Likewise.
	* sysdeps/x86_64/multiarch/s_fma.c (__fma_sse2): Add attribute_hidden.
	(__fma_fma): Make static.
	* sysdeps/x86_64/multiarch/s_fmaf.c (__fmaf_sse2): Add attribute_hidden.
	(__fmaf_fma): Make static.

2009-08-31  Andreas Schwab  <schwab@redhat.com>

	* libio/wfileops.c (_IO_wfile_seekoff): Remove dead code and
	reformulate in-buffer optimisation check to match code in
	_IO_new_file_seekoff.

2009-08-31  Joshua W. Boyer  <jwboyer@linux.vnet.ibm.com>
