@@ -1,3 +1,7 @@
+2009-09-09  Ulrich Drepper  <drepper@redhat.com>
+
+	* posix/getconf.c (main): Handle -- on command line.
+
 2009-09-05  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* configure.in: Support binutils 2.100 and 3.0.
